--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -102,7 +102,7 @@
     <!-- <img src="../img/pic.jpg" width="300" height="400" />  -->
        
     <img src="http://s1.sinaimg.cn/mw690/001t2XaQzy774IcNrzO50" width="300" height="330" /> 
-    <button style="position:relative;left:180px;bottom:150px;font-size:30px;font-weight:bold;width:350px;height:100px;">Send a requst to verify</button>
+    <button style="position:relative;left:180px;bottom:150px;font-size:30px;font-weight:bold;width:350px;height:100px;">Call IBM Waston Visual Recognition to Verify</button>
   </main>
        
 </body>
